--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -200,12 +200,15 @@
     <string name="add_token_added">Добавлен</string>
     <string name="remove_token">Удалить токен</string>
     <string name="token_icon">Значок токена</string>
+    <string name="add_custom_token_title" translatable="false">Добавить токен</string>
     <string name="custom_token_contract_address_input_title">Адрес контракта</string>
     <string name="custom_token_creation_error_network_not_selected">Пожалуйста, выберите сеть</string>
     <string name="custom_token_creation_error_empty_fields">Пожалуйста, заполните все поля</string>
-    <string name="custom_token_creation_error_wrong_decimals">Количество знаков после запятой некорректно</string>
+    <string name="custom_token_creation_error_wrong_decimals">Количество знаков после запятой должно быть корректным числом не больше %d</string>
     <string name="custom_token_creation_error_invalid_contract_address">Адрес контракта некорректен</string>
     <string name="custom_token_creation_error_invalid_derivation_path">Путь деривации некорректен</string>
+    <string name="custom_token_validation_error_not_found">Токены могут быть созданы кем угодно. Остерегайтесь мошеннических токенов, они могут ничего не стоить</string>
+    <string name="custom_token_validation_error_already_added">Этот токен/сеть уже находится в вашем списке</string>
     <string name="custom_token_type_network">Сеть</string>
     <string name="custom_token_type_token">Токен</string>
     <string name="custom_token_decimals_input_title">Знаков после запятой</string>
@@ -215,7 +218,9 @@
     <string name="custom_token_name_input_title">Название токена</string>
     <string name="custom_token_token_symbol_input_placeholder">Например, USDC</string>
     <string name="custom_token_token_symbol_input_title">Символ токена</string>
-    <string name="custom_token_derivation_path_input_title">Путь деривации (необязательно)</string>
+    <string name="custom_token_derivation_path_input_title">Деривация по BIP44</string>
+    <string name="custom_token_derivation_path_default">По-умолчанию</string>
+    <string name="custom_token_add_token">Добавить токен</string>
     <string name="details_section_title_blockchain">Блокчейн</string>
     <string name="details_row_title_manage_tokens">Управление токенами</string>
     <string name="add_tokens_subtitle_blockchains">Блокчейны</string>
