--- a/core/res/src/main/res/values-ru/strings.xml
+++ b/core/res/src/main/res/values-ru/strings.xml
@@ -91,7 +91,7 @@
     <string name="common_explore_transaction_history">Посмотреть историю транзакций</string>
     <string name="common_explorer">Обозреватель</string>
     <string name="common_fee_label">Комиссия</string>
-    <string name="common_fee_selector_footer">Сетевые комиссии – это плата пользователя за обработку и подтверждение транзакций. Размер комиссии зависит от нагрузка на сеть, объема транзакции и приоритета исполнения. %s</string>
+    <string name="common_fee_selector_footer">Сетевые комиссии – это плата пользователя за обработку и подтверждение транзакций. Размер комиссии зависит от нагрузки на сеть, объема транзакции и приоритета исполнения. %s</string>
     <string name="common_fee_selector_link_description">Подробнее</string>
     <string name="common_fee_selector_option_custom">Свое</string>
     <string name="common_fee_selector_option_fast">Быстро</string>
@@ -495,6 +495,8 @@
     <string name="send_notification_invalid_reserve_amount_title">Сумма отправки не может быть менее %1$s</string>
     <string name="send_notification_transaction_delay_text">Обратите внимание, что при определенных параметрах комиссии возможны задержки по вашей транзакции</string>
     <string name="send_notification_transaction_delay_title">Возможны задержки по транзакции</string>
+    <string name="send_notification_reduce_by">Уменьшить до [%s]</string>
+    <string name="send_notification_reduce_to">Уменьшить на [%s]</string>
     <string name="send_optional_field">Необязательное</string>
     <string name="send_recent_transactions">Последние</string>
     <string name="send_recipient">Получатель</string>
