--- a/core/res/src/main/res/values-ru/strings.xml
+++ b/core/res/src/main/res/values-ru/strings.xml
@@ -480,14 +480,12 @@
     <string name="send_max_fee">Комиссия не превысит </string>
     <string name="send_max_fee_footer">Максимальная cумма комиссии</string>
     <string name="common_network_fee_title">Сетевая комиссия</string>
-    <string name="send_network_fee_warning_content">Сумма отправки будет уменьшена для покрытия выбранного уровня комиссии</string>
+    <string name="send_network_fee_warning_content">Сумма отправки будет уменьшена на %1$s для покрытия выбранного уровня комиссии. Получателю будет отправлено %2$s.</string>
     <string name="send_network_fee_warning_title">Покрытие сетевой комиссии</string>
     <string name="send_notification_exceed_balance_text">Недостаточно средств для перевода, так как сумма комиссии и сумма перевода в совокупности больше имеющегося баланса</string>
     <string name="send_notification_exceed_balance_title">Недостаточно средств</string>
     <string name="send_notification_high_fee_title">Увеличение комиссии</string>
     <string name="send_notification_high_fee_text">Комиссия при переводе всего баланса выше. Для того, чтобы снизить комиссию Вы можете оставить 0.01.</string>
-    <string name="send_notification_fee_too_high_accept">Оставить %s XTZ</string>
-    <string name="send_notification_fee_too_high_ignore">Отправить все</string>
     <string name="send_notification_fee_too_high_title">Установлена высокая комиссия</string>
     <string name="send_notification_fee_too_high_text">Сумма комиссии в %s раз превышает рекомендованную. Убедитесь, что указанная комиссия верна.</string>
     <string name="send_notification_invalid_amount_text">Включенная комиссия превышает сумму перевода, что приводит к отрицательному значению</string>
@@ -497,8 +495,10 @@
     <string name="send_notification_invalid_reserve_amount_title">Сумма отправки не может быть менее %1$s</string>
     <string name="send_notification_transaction_delay_text">Обратите внимание, что при определенных параметрах комиссии возможны задержки по вашей транзакции</string>
     <string name="send_notification_transaction_delay_title">Возможны задержки по транзакции</string>
-    <string name="send_notification_reduce_by">Уменьшить до [%s]</string>
-    <string name="send_notification_reduce_to">Уменьшить на [%s]</string>
+    <string name="send_notifiaction_transaction_limit_title">Лимит транзакции</string>
+    <string name="send_notification_transaction_limit_text">Из-за ограничений %1$s в одну транзакцию может поместиться только %2$s UTXO. Это означает, что вы можете отправить только %3$s или меньше. Вам нужно уменьшить сумму.</string>
+    <string name="send_notification_reduce_by">Уменьшить до %s</string>
+    <string name="send_notification_reduce_to">Уменьшить на %s</string>
     <string name="send_optional_field">Необязательное</string>
     <string name="send_recent_transactions">Последние</string>
     <string name="send_recipient">Получатель</string>
