--- a/core/res/src/main/res/values/strings.xml
+++ b/core/res/src/main/res/values/strings.xml
@@ -459,8 +459,9 @@
     <string name="send_amount_substract_footer">The recipient will receive %s</string>
     <string name="send_alert_transaction_failed_title">The transaction is not completed</string>
     <string name="send_alert_transaction_failed_text">Reason: %1$s\nCode: %2$s</string>
-    <string name="send_alert_fee_coverage_title">Недостаточно средств для покрытия комиссии сети. Вычесть комиссию из отправляемой сумму?</string>
-    <string name="send_alert_fee_coverage_subract_text">Вычесть</string>
+    <string name="send_alert_fee_coverage_title">Not enough funds to cover the network commission. Subtract the commission from the amount sent?</string>
+    <string name="send_alert_fee_coverage_subract_text">Subtract</string>
+    <string name="send_alert_fee_too_low_text">Вы указали комиссию ниже рекомендуемой, это может привести к задержке исполнения вашей транзакции. Продолжить?</string>
     <string name="send_confirm_label">Confirm</string>
     <string name="send_date_format">%1$s at %2$s</string>
     <string name="send_destination_hint_address">Address</string>
@@ -494,8 +495,6 @@
     <string name="send_notification_exceed_balance_title">Total exceeds balance</string>
     <string name="send_notification_high_fee_title">Fee is increased</string>
     <string name="send_notification_high_fee_text">The fee for transferring the entire balance is higher. To reduce the commission, you can leave 0.01.</string>
-    <string name="send_notification_fee_too_high_accept">Reduce by %s XTZ</string>
-    <string name="send_notification_fee_too_high_ignore">No, send all</string>
     <string name="send_notification_fee_too_high_title">Custom fee is high</string>
     <string name="send_notification_fee_too_high_text">The commission amount is %s times the recommended amount. Make sure that the custom settings are correct.</string>
     <string name="send_notification_invalid_amount_text">The included commission exceeds the transfer amount, leading to a negative value</string>
@@ -506,11 +505,11 @@
     <string name="send_notification_transaction_delay_text">Kindly be aware that your transaction may experience delays under specific fee settings</string>
     <string name="send_notification_transaction_delay_title">Transaction delays are possible</string>
     <string name="send_notifiaction_transaction_limit_title">Transaction limitation</string>
-    <string name="send_notifiaction_transaction_limit_text">Due to %1$s limitations only %2$s UTXOs can fit in a single transaction. This means you can only send %3$s or less. You need to reduce the amount.</string>
+    <string name="send_notification_transaction_limit_text">Due to %1$s limitations only %2$s UTXOs can fit in a single transaction. This means you can only send %3$s or less. You need to reduce the amount.</string>
     <string name="send_notification_existential_deposit_title">Existential deposit</string>
     <string name="send_notification_existential_deposit_text">The account will be wiped from the blockchain if a balance goes below the existential deposit. Please ensure that the remaining balance after sending will not be less than %s.</string>
-    <string name="send_notification_reduce_by">Reduce by [%s]</string>
-    <string name="send_notification_reduce_to">Reduce to [%s]</string>
+    <string name="send_notification_reduce_by">Reduce by %s</string>
+    <string name="send_notification_reduce_to">Reduce to %s</string>
     <string name="send_optional_field">Optional</string>
     <string name="send_qrcode_scan_info">Please align your QR code with the square to scan it. Ensure you scan %s network address.</string>
     <string name="send_recent_transactions">Recent</string>
