--- a/core/res/src/main/res/values-zh-rTW/strings.xml
+++ b/core/res/src/main/res/values-zh-rTW/strings.xml
@@ -185,6 +185,9 @@
   <string name="onboarding_navbar_title_creating_backup">創建備份</string>
   <string name="onboarding_seed_button_read_more">閱讀更多關於助記詞的訊息</string>
   <string name="onboarding_seed_generate_message">按照下面給出的順序寫下這 12 個單詞，並將它們存放在安全秘密的地方。</string>
+  <plurals name="onboarding_seed_generate_message_words_count">
+    <item quantity="other">按照下面給出的順序寫下這 %d 個單詞，並將它們存放在安全秘密的地方。</item>
+  </plurals>
   <string name="onboarding_seed_intro_button_generate">生成助記詞</string>
   <string name="onboarding_seed_intro_button_import">導入錢包</string>
   <string name="onboarding_seed_intro_title">使用助記詞</string>
@@ -272,10 +275,6 @@
   <string name="send_total_subtitle_format">%s 將被發送</string>
   <string name="send_transaction_success">交易已成功簽署並發送至區塊鏈節點。錢包餘額稍後更新</string>
   <string name="send_validation_invalid_address">無效地址</string>
-  <string name="shop_buy_now">現在購買</string>
-  <string name="shop_i_have_a_promo_code">輸入折扣碼</string>
-  <string name="shop_one_wallet">Tangem Wallet</string>
-  <string name="shop_other_payment_methods">其他付款方式</string>
   <string name="story_awe_description">安全地存儲您的加密貨幣，同時將私鑰保存在您的卡中</string>
   <string name="story_awe_title">創新式的硬體錢包</string>
   <string name="story_backup_description">最多 3張實體卡片 到一個錢包</string>
@@ -292,12 +291,9 @@
   <string name="story_web3_title">兼容Web3.0</string>
   <string name="swapping_approve_information_text">批准被視為所有去中心化交易所的行業標準，並保護您的錢包在未經您許可的情況下不被智能合約訪問。按照設計，智能合約無法訪問您的代幣，除非您從您的終端批准訪問。通過“解鎖”您的代幣，您將獲得 1inch 智能合約使用您的資產的權限。網絡的礦工將獲得Gas Fee（由您支付）作為補償，以在區塊鏈上記錄此操作。一旦獲得許可，您就可以交易您的代幣。</string>
   <string name="swapping_approve_information_title">批准</string>
-  <string name="swapping_error_wrapper">錯誤： %s</string>
   <string name="swapping_give_permission">賦予權限</string>
   <string name="swapping_high_price_impact_description">在此代幣交換的數量將對價格產生重大影響，並降低您收到的數量</string>
   <string name="swapping_insufficient_funds">餘額不足</string>
-  <string name="swapping_pending_transaction_subtitle">交易進行中...</string>
-  <string name="swapping_pending_transaction_title">等待中</string>
   <string name="swapping_permission_buttons_approve">允許</string>
   <string name="swapping_permission_header">賦予權限</string>
   <string name="swapping_permission_rows_amount">數量 %s</string>
