--- a/core/res/src/main/res/values/strings.xml
+++ b/core/res/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
   <string name="alert_manage_tokens_unsupported_message">Tokens in %1$s network are not supported by this card due to firmware limitation.</string>
   <string name="alert_troubleshooting_scan_card_title">Are you having difficulty scanning your card?</string>
   <string name="alert_unsupported_card">This card is not designed to work with this app</string>
+  <string name="app_settings_default_fee">Default Fee</string>
+  <string name="app_settings_default_fee_footer">Enable Default Fee to set transaction fees automatically and skip the Fee page when sending funds. You can always go back to this page if necessary.</string>
   <string name="app_settings_enable_biometrics_description">Go to settings to enable biometric authentication in the Tangem App</string>
   <string name="app_settings_enable_biometrics_title">Enable biometric authentication</string>
   <string name="app_settings_off_saved_access_code_alert_message">This will delete all the saved wallet access codes. Any further operation with the wallet will require submitting the access code.</string>
@@ -185,7 +187,6 @@
   <string name="exchange_tokens_empty_tokens">You haven\'t added any tokens yet. Add tokens via Market to swap</string>
   <string name="exchange_tokens_unavailable_tokens_header">Cannot be swapped for %s</string>
   <string name="express_by_provider">Provided by</string>
-  <string name="express_by_provider_placeholder">Provided by %s</string>
   <string name="express_cex_status_button_title">Status</string>
   <string name="express_choose_providers_subtitle">Tangem offers token swaps via 3rd-party providers according to each provider\'s terms</string>
   <string name="express_choose_providers_title">Choose provider</string>
@@ -263,7 +264,6 @@
   <string name="main_tokens">Tokens</string>
   <string name="manage_tokens_add">Add</string>
   <string name="manage_tokens_edit">Edit</string>
-  <string name="manage_tokens_list_header_subtitle">Couldn’t find this token, you can add it manually</string>
   <string name="manage_tokens_list_header_title">Coin market cap</string>
   <string name="manage_tokens_network_selector_native_subtitle">Blockchain the cryptocurrency was initially created</string>
   <string name="manage_tokens_network_selector_native_title">Native network</string>
@@ -278,7 +278,6 @@
     <item quantity="other">%1$d of %2$d wallets</item>
   </plurals>
   <string name="manage_tokens_search_placeholder">e.g. BTC I trust, hodl I must</string>
-  <string name="manage_tokens_title">Coin market cap</string>
   <string name="manage_tokens_unavailable_description">The selected token is currently unavailable for actions within the crypto wallet. But worry not, you can express your interest by upvoting it.</string>
   <string name="manage_tokens_unavailable_vote">Upvote</string>
   <string name="manage_tokens_wallet_selector_title">Choose wallet</string>
@@ -323,7 +322,15 @@
   <string name="onboarding_navbar_title_creating_backup">Creating a backup</string>
   <string name="onboarding_seed_button_read_more">Read more about seed phrase</string>
   <string name="onboarding_seed_generate_message">Write these 12 words down in the order given below and store them in a safe and secret place.</string>
+  <plurals name="onboarding_seed_generate_message_words_count">
+    <item quantity="one"></item>
+    <item quantity="other">Write these %d words down in the order given below and store them in a safe and secret place.</item>
+  </plurals>
   <string name="onboarding_seed_generate_title">Your seed phrase</string>
+  <plurals name="onboarding_seed_generate_words_count">
+    <item quantity="one"></item>
+    <item quantity="other">%d words</item>
+  </plurals>
   <string name="onboarding_seed_import_message">To import your wallet, enter your seed phrase in the field below</string>
   <string name="onboarding_seed_intro_button_generate">Generate seed phrase</string>
   <string name="onboarding_seed_intro_button_import">Import wallet</string>
@@ -499,10 +506,6 @@
   <string name="send_validation_invalid_address">Invalid address</string>
   <string name="send_wallet_balance_format">%1$s (%2$s)</string>
   <string name="sent_transaction_sent_title">Transaction sent</string>
-  <string name="shop_buy_now">Buy now</string>
-  <string name="shop_i_have_a_promo_code">I have a promo code…</string>
-  <string name="shop_one_wallet">Tangem Wallet</string>
-  <string name="shop_other_payment_methods">Other payment methods</string>
   <string name="story_awe_description">Store your crypto assets secure while keeping private keys contained in your card</string>
   <string name="story_awe_title">Revolutionary Hardware Wallet</string>
   <string name="story_backup_description">Up to 3 physical cards to one wallet</string>
@@ -524,14 +527,11 @@
   <string name="swapping_alert_title">Fees</string>
   <string name="swapping_approve_information_text">All decentralized exchanges require approvals to prevent smart contracts from accessing your wallet without your permission. By design, smart contracts can\'t access your tokens unless you approve. By \"unlocking\" your tokens, you authorize the 1-inch smart contract to spend them. The network\'s miners receive a gas fee (paid by you) to record this action on the blockchain. You can swap your token after giving approval.</string>
   <string name="swapping_approve_information_title">Approve</string>
-  <string name="swapping_error_wrapper">Error: %s</string>
   <string name="swapping_from_title">You swap</string>
   <string name="swapping_give_permission">Give Permission</string>
   <string name="swapping_high_price_impact_description">Swapping this amount of selected tokens will cause a significant price impact and reduce your outcome.</string>
   <string name="swapping_insufficient_funds">Insufficient funds</string>
   <string name="swapping_network_fee_warning_content">Sending amount will be reduced to cover the selected fee level</string>
-  <string name="swapping_pending_transaction_subtitle">Transaction in progress...</string>
-  <string name="swapping_pending_transaction_title">Waiting</string>
   <string name="swapping_permission_buttons_approve">Approve</string>
   <string name="swapping_permission_current_transaction">Current transaction</string>
   <string name="swapping_permission_fee_footer">The network will charge a token approval fee to verify that you are authorizing the use of your token for the swap.</string>
