--- a/core/res/src/main/res/values/strings.xml
+++ b/core/res/src/main/res/values/strings.xml
@@ -512,18 +512,18 @@
   <string name="hot_access_code_set_biometric_ask">Do you want to allow “Tangem” to use biometric authentication? To confirm your identity and open the app</string>
   <string name="hot_crypto_add_token_subtitle">to %s</string>
   <string name="hot_crypto_token_network">On %s network</string>
-  <string name="hw_access_code_create_alert_title">Are you sure you want to exit the access code creation process?</string>
+  <string name="hw_access_code_create_alert_title">Are you sure you want to cancel access code setup?</string>
   <string name="hw_activation_need_backup">Backup Now</string>
   <string name="hw_activation_need_description">To complete setup, back up your wallet and secure app access with a Access Code.</string>
   <string name="hw_activation_need_finish">Finish Now</string>
   <string name="hw_activation_need_title">Finish Wallet Activation</string>
-  <string name="hw_activation_need_warning_description">To complete setup, secure app access with Access Code.</string>
+  <string name="hw_activation_need_warning_description">Complete setup by securing the app with an access code.</string>
   <string name="hw_backup_alert_description">If you do, you\'ll need to start over.</string>
-  <string name="hw_backup_alert_title">Are you sure you want to exit the activation process?</string>
+  <string name="hw_backup_alert_title">Are you sure you want to quit the activation process?</string>
   <string name="hw_backup_close_description">If you do, you\'ll need to start over.</string>
-  <string name="hw_backup_google_drive_description">Recover an existing wallet stored in your Google Drive backup</string>
-  <string name="hw_backup_google_drive_title">Google Drive Backup</string>
-  <string name="hw_backup_hardware_description">Upgrade your security right away with a best in class hardware wallet from Tangem.</string>
+  <string name="hw_backup_google_drive_description">Recover existing wallet via Google Drive backup</string>
+  <string name="hw_backup_google_drive_title">Google Drive backup</string>
+  <string name="hw_backup_hardware_description">Level up your security with a superior Tangem hardware wallet.</string>
   <string name="hw_backup_hardware_title">Hardware Wallet</string>
   <string name="hw_backup_need_action">Go to backup</string>
   <string name="hw_backup_need_description">To secure your wallet with a Access Code, complete the backup first.</string>
@@ -538,22 +538,22 @@
   <string name="hw_create_title">Create Mobile Wallet</string>
   <string name="hw_import_seed_phrase_already_imported">This recovery phrase has already been imported</string>
   <string name="hw_mobile_wallet">Mobile Wallet</string>
-  <string name="hw_upgrade_error_card_already_has_wallet">This device can’t be used for upgrade, it already contains another wallet.</string>
-  <string name="hw_upgrade_error_card_key_import">Choose another device, this one can’t be used for upgrade.</string>
+  <string name="hw_upgrade_error_card_already_has_wallet">Can’t upgrade. A wallet already exists on this device</string>
+  <string name="hw_upgrade_error_card_key_import">Pick another device. This one can’t be used for the upgrade.</string>
   <string name="hw_upgrade_error_wallet2_card_required">An error occurred during the operation.</string>
   <string name="hw_upgrade_funds_access_description">Your funds stay safe and fully accessible during the process</string>
   <string name="hw_upgrade_funds_access_title">Funds access</string>
-  <string name="hw_upgrade_general_security_description">All private wallet data will be removed from the mobile app and stored securely on your Tangem device only</string>
+  <string name="hw_upgrade_general_security_description">Your wallet data will be erased from the app and stored on your Tangem device</string>
   <string name="hw_upgrade_general_security_title">General Security</string>
-  <string name="hw_upgrade_key_migration_description">Private keys will be moved from the app to your Tangem card or ring</string>
+  <string name="hw_upgrade_key_migration_description">Private keys will be moved from the app to your Tangem device</string>
   <string name="hw_upgrade_key_migration_title">Key Migration</string>
   <string name="hw_upgrade_scan_device">Scan device</string>
   <string name="hw_upgrade_start_action">Start upgrade</string>
-  <string name="hw_upgrade_start_description">You’re about to upgrade your wallet to Tangem Wallet. This will keep your assets safe with cold storage.</string>
+  <string name="hw_upgrade_start_description">You’re about to upgrade to a Tangem device, where your assets stay safe in cold storage.</string>
   <string name="hw_upgrade_start_title">Tangem Wallet</string>
   <string name="hw_upgrade_title">Upgrade to Hardware Wallet</string>
-  <string name="hw_upgrade_to_cold_banner_description">Keep your crypto safe with Tangem’s best-in-class hardware wallet.</string>
-  <string name="hw_upgrade_to_cold_banner_title">Upgrade wallet with a hardware backup</string>
+  <string name="hw_upgrade_to_cold_banner_description">Keep your crypto safe with Tangem\'s top-tier hardware wallet.</string>
+  <string name="hw_upgrade_to_cold_banner_title">Upgrade your wallet to hardware storage</string>
   <string name="information_generated_with_ai">This information was generated with AI.\nTap here, if you find any errors.</string>
   <string name="initial_message_change_access_code_body">To change the access code tap the card or ring as shown above and do not remove until the end of the operation</string>
   <string name="initial_message_change_passcode_body">To change the passcode tap the card as shown above and do not remove until the end of the operation</string>
@@ -759,8 +759,8 @@
   <string name="notification_referral_promo_text">Share your code - earn 5 USDT per sale. Your friend gets 10% OFF.</string>
   <string name="notification_referral_promo_title">Get REWARDS for every friend!</string>
   <string name="notification_sepa_button">Buy crypto</string>
-  <string name="notification_sepa_text">Enjoy zero fees when purchasing crypto via SEPA transfer.</string>
-  <string name="notification_sepa_title">Buy Crypto with SEPA</string>
+  <string name="notification_sepa_text">Tangem slashes SEPA fees to almost nothing, giving you the best deal yet.</string>
+  <string name="notification_sepa_title">Buy crypto and don\'t pay fees!</string>
   <string name="onboarding_access_code_feature_1_description">Set up a single access code to protect all your devices.</string>
   <string name="onboarding_access_code_feature_1_title">Protect</string>
   <string name="onboarding_access_code_feature_2_description">Set an individual access code for each card or ring later.</string>
